# l4-ide

./: BRANCH.md  BUILD-SPEC-dmnmd-to-l4.md  L4-LINT-DESIGN.md  build-dmnmd-to-l4.workflow.js  cabal.project
.github/workflows/: build-faster.yml  nix.yml
doc/reference/: GLOSSARY.md
jl4/: jl4.cabal
jl4-core/: jl4-core.cabal
jl4-core/libraries/: prelude.l4
jl4-core/test/: CsvImportSpec.hs  CsvIntegrationSpec.hs  CsvSynthesizeSpec.hs  LedgerRenderingSpec.hs  LedgerSubstrateSpec.hs  M45ReadSpec.hs  M4PartyLedgerSpec.hs  M5DeonticSequencingSpec.hs  RecordLedgerSpec.hs  TraceOrderingSpec.hs
jl4-proleg/: jl4-proleg.cabal
jl4-proleg/docs/: burden-of-proof.md  proleg-concrete-syntax.md
jl4-proleg/examples/: lease.pl  minor-duress.pl
jl4-proleg/l4/: burden.l4
jl4-proleg/src/L4/Proleg/: Burden.hs  Parser.hs  Print.hs  Syntax.hs
jl4-proleg/test/: Burden.hs  Roundtrip.hs
jl4-repl/app/: Main.hs
jl4/app/: Main.hs
jl4/experiments/: housing-act-common.l4  housing-act-ground-1-amended-2024.l4  housing-act-ground-1-amended-2025.l4  housing-act-ground-1-full.l4  housing-act-ground-1-limbs.l4  housing-act-ground-1-traced.l4  housing-act-ground-1.l4  housing-act-ground-10.l4  housing-act-ground-11.l4  housing-act-ground-12.l4  housing-act-ground-13.l4  housing-act-ground-14.l4  housing-act-ground-14A.l4  housing-act-ground-14ZA.l4  housing-act-ground-15.l4  housing-act-ground-17.l4  housing-act-ground-18.l4  housing-act-ground-1A.l4  (+38 more)
nix/: shell.nix
paper/: .gitignore  Makefile  l4-icail-ja.tex  l4-icail.bib  l4-icail.tex
wasm-artifacts/: README.txt  version.txt
(+159 files in other folders)
