cabal-version: 3.0
name: jl4-proleg
version: 0.1.0.0
synopsis: Two-way transpiler between canonical PROLEG and L4.
build-type: Simple
tested-with: GHC==9.10.2

source-repository head
  type: git
  location: https://github.com/legalese/l4-ide/tree/main/jl4-proleg

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wderiving-typeable
    -Wunused-packages
    -Werror
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    NoImportQualifiedPost

  build-depends:
    base >=4.7 && <5

library
  import: defaults
  hs-source-dirs:
    src
  exposed-modules:
    L4.Proleg.Syntax
    L4.Proleg.Print
    L4.Proleg.Parser
    L4.Proleg.Burden
  build-depends:
    text,
    transformers

test-suite jl4-proleg-roundtrip
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is: Roundtrip.hs
  build-depends:
    text,
    jl4-proleg

test-suite jl4-proleg-burden
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is: Burden.hs
  build-depends:
    jl4-proleg
